Fix more of the css content

--- a/css/main.css
+++ b/css/main.css
@@ -87,7 +87,7 @@ td {
 @media only screen and (min-width: 35em) {
 
   .about-content {
-    bottom: 0;
+    bottom: 1825px;
     position: absolute;
     width: 100%;
 
