--- a/css/main.css
+++ b/css/main.css
@@ -84,6 +84,10 @@ td {
   color: #fff;
 }
 
+.nav :focus {
+  outline: 3px solid #000;
+}
+
 @media only screen and (min-width: 35em) {
 
   .about-content {
