--- a/css/main.css
+++ b/css/main.css
@@ -84,14 +84,14 @@ td {
   color: #fff;
 }
 
-nav:focus {
+.nav:focus {
   outline: 3px solid #000;
 }
 
 @media only screen and (min-width: 35em) {
 
   .about-content {
-    bottom: 1825px;
+    bottom: 0;
     position: absolute;
     width: 100%;
 
