--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,6 @@ html {
 
 a {
   color: #568c36;
-  text-decoration: none;
 }
 
 a:hover {
@@ -36,7 +35,8 @@ a:hover {
   text-decoration: none;
 }
 
-.nav a:hover {
+.nav a:hover,
+.nav a:focus {
   background-color: #fff;
   color: #113c00;
 }
@@ -91,7 +91,7 @@ td {
 @media only screen and (min-width: 35em) {
 
   .about-content {
-    bottom:0px;
+    bottom: 0;
     position: absolute;
     width: 100%;
 
